--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
             </div>
         </nav>
     </header>
+    <section class="intro">
+        <div class="intro__body container">
+            <h1 class="intro__title">Men’s health. The <br> way it should be.</h1>
+            <p class="intro__text">No waiting rooms or awkward conversations. Just clinically proven treatments direct to your door with support along the way.</p>
+            <div class="intro__btns">
+                <a href="" class="intro__btn">Get Started</a>
+                <a href="" class="intro__btn">View Treatments</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
