--- a/index.html
+++ b/index.html
@@ -33,5 +33,91 @@
             </div>
         </div>
     </section>
+    <section class="adventages">
+        <div class="adventages__top">
+            <div class="adventages-top__body container">
+                <div class="adventages-top__item">
+                    <img src="img/adventages-item-1.png" alt="" class="adventages-item__img">
+                    <p class="adventages-item__text">UK licenced medication</p>
+                </div>
+                <div class="adventages-top__item">
+                    <img src="img/adventages-item-2.png" alt="" class="adventages-item__img">
+                    <p class="adventages-item__text">Free, discreet delivery</p>
+                </div>
+                <div class="adventages-top__item">
+                    <img src="img/adventages-item-3.png" alt="" class="adventages-item__img">
+                    <p class="adventages-item__text">Cancel any time</p>
+                </div>
+                <div class="adventages-top__item">
+                    <img src="img/adventages-item-4.png" alt="" class="adventages-item__img">
+                    <p class="adventages-item__text">Ongoing clinician support</p>
+                </div>
+            </div>
+        </div>
+        <div class="adventages__btm">
+            <div class="adventages-btm__body container">
+                <div class="adventages-btm__top">
+                        <h2 class="adventages-btm__title">Healthcare. Made easy</h2>
+                    <div class="adventages-btm__stars">
+                        <img src="img/adventages-btm__star-1.png" alt="" class="adventages-btm__star">
+                        <img src="img/adventages-btm__star-1.png" alt="" class="adventages-btm__star">
+                        <img src="img/adventages-btm__star-1.png" alt="" class="adventages-btm__star">
+                        <img src="img/adventages-btm__star-1.png" alt="" class="adventages-btm__star">
+                        <img src="img/adventages-btm__star-2.png" alt="" class="adventages-btm__star">
+                    </div>
+                    <p class="adventages-btm__text"><span class="adventages-btm-text__primary">Rated excellent </span>on Trustpilot</p>
+                </div>
+                <div class="adventages-btm__items">
+                    <div class="adventages-btm__item">
+                        <img src="img/adventages-item-img.png" alt="" class="adventages__btm-item__img">
+                        <h3 class="adventages-btm-item__title">Treatments online</h3>
+                        <p class="adventages-btm-item__text">We’ll ask you a couple of quick medical questions. Tick the boxes and a clinician will review your answers and issue you a prescription.z</p>
+                    </div>
+                    <div class="adventages-btm__item">
+                        <img src="img/adventages-item-img-2.png" alt="" class="adventages__btm-item__img">
+                        <h3 class="adventages-btm-item__title">Free fast delivery</h3>
+                        <p class="adventages-btm-item__text">Your selected treatments will be delivered for free in discreet packaging. There’ll be some helpful info included to make sure you get the best out of it.</p>
+                    </div>
+                    <div class="adventages-btm__item">
+                        <img src="img/adventages-item-img-3.png" alt="" class="adventages__btm-item__img">
+                        <h3 class="adventages-btm-item__title">Clinician support</h3>
+                        <p class="adventages-btm-item__text">Chat with a medical expert whenever you need. On the phone or via email. With support throughout your treatment.</p>
+                    </div>
+                </div>
+                <a href="#about"><img src="img/adventages__next__icon.png" alt="" class="adventages__next__icon"></a>
+            </div>
+        </div>
+    </section>
+    <section class="about" id="about">
+        <div class="about__body container">
+            <h2 class="about__title">The most effective treatments. Backed by science.</h2>
+            <div class="about__items">
+                <div class="about__item">
+                    <img src="img/about-item1.png" alt="" class="about-item__img">
+                    <h3 class="about-item__title">Hair Loss</h3>
+                    <p class="about-item__text">Now hair loss is treatable. There are clinically proven treatments effective in 9/10 men. And we have them all here.</p>
+                    <a href="#!" class="about-item__btn">View Treatments</a>
+                </div>
+                <div class="about__item">
+                    <img src="img/about-item2.png" alt="" class="about-item__img">
+                    <h3 class="about-item__title">Sex health</h3>
+                    <p class="about-item__text">Erectile dysfunction (ED) happens to a lot of us. We can help you figure out why. And offer a number of treatments that can help too.</p>
+                    <a href="#!" class="about-item__btn">View Treatments</a>
+                </div>
+                <div class="about__item">
+                    <img src="img/about-item3.png" alt="" class="about-item__img">
+                    <h3 class="about-item__title">Skin</h3>
+                    <p class="about-item__text">Healthy skin is key to keep you feeling and looking your best. We’ve harnessed the best science has to offer so you can look after yours.</p>
+                    <a href="#!" class="about-item__btn">View Treatments</a>
+                </div>
+                <div class="about__item">
+                    <img src="img/about-item4.png" alt="" class="about-item__img">
+                    <h3 class="about-item__title">Daily Health</h3>
+                    <p class="about-item__text">Help your body fight the good fight with our scientifically proven range of nutrients and vitamins. Making healthier easier, every day.</p>
+                    <a href="#!" class="about-item__btn">View Treatments</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
