--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/stye.css">
     <title>MANUAL</title>
 </head>
@@ -115,6 +117,59 @@
                     <h3 class="about-item__title">Daily Health</h3>
                     <p class="about-item__text">Help your body fight the good fight with our scientifically proven range of nutrients and vitamins. Making healthier easier, every day.</p>
                     <a href="#!" class="about-item__btn">View Treatments</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="methods">
+        <div class="methods__body container">
+            <div class="methods__item methods__left">
+                <a href="#!" class="methods-top__btn">NEW</a>
+                <h2 class="methods__title">Manual Wellbeing</h2>
+                <p class="methods__text">Our new offering is a holistic plan to improve your health with recommendations from medical experts, as well as tracking and ongoing clinician support.</p>
+                <a href="#!" class="methods-btm__btn">VIEW MORE</a>
+                <div class="methods__icons">
+                    <p class="methods-item__texts"><i class="fal fa-check methods-item__icon"></i><p class="methods-item__text">Online consultation</p></p>
+                    <p class="methods-item__texts"><i class="fal fa-check methods-item__icon"></i><p class="methods-item__text">Personalised health plan</p></p>
+                    <p class="methods-item__texts"><i class="fal fa-check methods-item__icon"></i><p class="methods-item__text">Tracking & Clinician support</p></p>
+                </div>
+            </div>
+            <div class="menthods__item methods__right">
+                <div class="methods-right__item">
+                    <img src="img/methods-icon-1.png" alt="" class="methods__img">
+                    <h3 class="methods-right__title">Hair</h3>
+                </div>
+                <div class="methods-right__item">
+                    <img src="img/methods-icon-2.png" alt="" class="methods__img">
+                    <h3 class="methods-right__title">Immunity</h3>
+                </div>
+                <div class="methods-right__item">
+                    <img src="img/methods-icon-3.png" alt="" class="methods__img">
+                    <h3 class="methods-right__title">Sleep</h3>
+                </div>
+                <div class="methods-right__item">
+                    <img src="img/methods-icon-4.png" alt="" class="methods__img">
+                    <h3 class="methods-right__title">Sex Health</h3>
+                </div>
+                <div class="methods-right__item">
+                    <img src="img/methods-icon-5.png" alt="" class="methods__img">
+                    <h3 class="methods-right__title">Brain</h3>
+                </div>
+                <div class="methods-right__item">
+                    <img src="img/methods-icon-6.png" alt="" class="methods__img">
+                    <h3 class="methods-right__title">Digestion</h3>
+                </div>
+                <div class="methods-right__item">
+                    <img src="img/methods-icon-7.png" alt="" class="methods__img">
+                    <h3 class="methods-right__title">Heart</h3>
+                </div>
+                <div class="methods-right__item">
+                    <img src="img/methods-icon-8.png" alt="" class="methods__img">
+                    <h3 class="methods-right__title">Muscles</h3>
+                </div>
+                <div class="methods-right__item">
+                    <img src="img/methods-icon-9.png" alt="" class="methods__img">
+                    <h3 class="methods-right__title">Skin</h3>
                 </div>
             </div>
         </div>
