--- a/index.html
+++ b/index.html
@@ -174,5 +174,20 @@
             </div>
         </div>
     </section>
+    <section class="profile">
+        <div class="profile__content container">
+            <p class="profile__text">Our medical team work round the clock to bring you the most effective treatments available in the UK</p>
+            <h2 class="profile__title">Dr. Earim Chaudry, Medical Director</h2>
+            <img src="img/profile-img.png" alt="" class="profile__img">
+            <div class="profile__icons">
+                <img src="img/profile__star-1.png" alt="" class="profle-star__img profile-star-1">
+                <h3 class="profile-star__title">Trustpilot</h3>
+                <img src="img/adventages-btm__star-1.png" alt="" class="profile-star__img">
+                <img src="img/adventages-btm__star-1.png" alt="" class="profile-star__img">
+                <img src="img/adventages-btm__star-1.png" alt="" class="profile-star__img">
+                <img src="img/adventages-btm__star-2.png" alt="" class="profile-star__img">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
