--- a/index.html
+++ b/index.html
@@ -189,5 +189,38 @@
             </div>
         </div>
     </section>
+    <section class="team">
+        <div class="team__content container">
+            <h2 class="team__title">Meet our medical team</h2>
+            <p class="team__text">Enabling the mission of revolutionising how men approach health, they are at the core of the men’s wellness platform. Meet our team.</p>
+            <div class="team__items">
+                <div class="team__item">
+                    <img src="img/team-img-1.png" alt="" class="team__img">
+                    <h3 class="team-item__title">Earim Chaudry, MD</h3>
+                    <p class="team-item__text">Medical Director</p>
+                </div>
+                <div class="team__item">
+                    <img src="img/team-img-2.png" alt="" class="team__img">
+                    <h3 class="team-item__title">Ryan Benbow</h3>
+                    <p class="team-item__text">Pharmacist, Ind. Prescriber</p>
+                </div>
+                <div class="team__item">
+                    <img src="img/team-img-3.png" alt="" class="team__img">
+                    <h3 class="team-item__title">Soheb Ganchi</h3>
+                    <p class="team-item__text">Pharmacist, Ind. Prescriber</p>
+                </div>
+            </div>
+        </div>
+        <div class="team-btm__content container">
+            <div class="team-btm__right">
+                <a href="" class="team-btm__phone"><i class="fas fa-phone-alt team-btm__phone-icon"></i></a>
+                <div class="team-btm__texts">
+                    <h2 class="team-btm__title">Get a free consultation</h2>
+                    <p class="team-btm__text">Speak with one of our clinicians and get personalised advice. Monday to Friday 9am-4:30pm</p>
+                </div>
+            </div>
+            <a href="" class="team-btm__btn">Book Consultation</a>
+        </div>
+    </section>
 </body>
 </html>
