--- a/index.html
+++ b/index.html
@@ -268,7 +268,22 @@
     </main>
     <footer class="footer">
         <div class="footer__body container">
-
+            <div class="footer__item">
+                <img src="img/footer__logo.png" alt="" class="footer__logo">
+                <div class="footer__links">
+                    <a href="" class="footer__link">Privacy Policy</a>
+                    <a href="" class="footer__link">Terms & Conditions</a>
+                    <a href="" class="footer__link">Terms of Sale</a>
+                    <a href="" class="footer__link">Complaints</a>
+                </div>
+                <p class="footer__text footer-text-1">Pharmacies: Manual Pharmacy</p>
+                <p class="footer__text">Copyright 2021 Manual™. All rights reserved.</p>
+            </div>
+            <div class="footer__icons">
+                <a href="https://facebook.com" target="__blank" class="footer__icon"><i class="fab fa-facebook-f footer-icon footer-icon-1"></i></a>
+                <a href="https://twitter.com" target="__blank" class="footer__icon"><i class="fab fa-twitter footer-icon"></i></a>
+                <a href="https://twitter.com" target="__blank" class="footer__icon"><i class="fab fa-instagram footer-icon"></i></i></a>
+            </div>
         </div>
     </footer>
 </body>
